# pyBumpHunter

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  data.root  environment.yml  gen_data.C  pyBumpHunter.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ipynb  test.py
.github/workflows/: automated_build.yml  automated_testing.yml
data/: gen_data.C
example/: example.ipynb  example.py  example2D.ipynb  example2D.py  pyBumpHunter
example/results/: results.txt
example/results/1D/: results.txt
example/results/2D/: results.txt
pyBumpHunter/: BumpHunter.py  BumpHunter2D.py  __init__.py  bumphunter_1dim.py  bumphunter_2dim.py  data_handler.py  functions.py  util.py  version.py
results_py/: results.txt
test/: test_BumpHunter.py  test_BumpHunter2D.py
testing/: test_BumpHunter.py
