[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyBumpHunter"
description = "Python implementation of the BumpHunter algorithm used by HEP community."
readme = "README.md"
authors = [
  { name = "Louis VASLIN", email = "louis.vaslin@clermont.in2p3.fr" }
]
maintainers = [
    { name = "The Scikit-HEP admins", email = "scikit-hep-admins@googlegroups.com" },
]
license = { text = "BSD-3-Clause" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "matplotlib",
    "numpy>=1.13.3",
    "scipy",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/scikit-hep/pyBumpHunter"

[project.optional-dependencies]
example = [
    "jupyter",
    "uproot",
]
test = [
    "pytest",
    "pytest-cov",
    "uproot",
]

[tool.setuptools.packages.find]
exclude = ["test"]

[tool.setuptools_scm]
write_to = "pyBumpHunter/version.py"
