[metadata]
name = pyBumpHunter
author = Louis VASLIN
author_email = louis.vaslin@clermont.in2p3.fr
url = https://github.com/lovaslin/pyBumpHunter
description : Python implementation of the BumpHenter algorithm used by HEP community.
long_description = file:README.md
long_description_content_type = text/markdown
licence = BSD 3-Clause License
classifier = 
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Information Analysis
	Topic :: Scientific/Engineering :: Mathematics
	Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.5
package = pyBumpHunter
install_requires =
	numpy>=1.13.3
	scipy
	matplotlib

[options.extras_require]
test =
	pytest
	uproot
	pandas


