[bdist_wheel]
universal=1

[metadata]
name = pyBumpHunter
author = Louis VASLIN
author_email = louis.vaslin@clermont.in2p3.fr
url = https://github.com/lovaslin/pyBumpHunter
description : Python implementation of the BumpHenter algorithm used by HEP community.
long_description = file:README.md
long_description_content_type = text/markdown
licence = BSD 3-Clause License
classifiers = 
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Information Analysis
	Topic :: Scientific/Engineering :: Mathematics
	Topic :: Scientific/Engineering :: Physics
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
install_requires =
	numpy>=1.13.3
	scipy
	matplotlib
packages = find:

[options.packages.find]
exclude = testing

[options.extras_require]
test =
	pytest
	uproot
example =
	jupyter
	uproot

