[metadata]
name = pyBumpHunter
description = Python implementation of the BumpHunter algorithm used by HEP community.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/pyBumpHunter
author = Louis VASLIN
author_email = louis.vaslin@clermont.in2p3.fr
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
licence = BSD 3-Clause License

[options]
packages = find:
install_requires =
    matplotlib
    numpy>=1.13.3
    scipy
python_requires = >=3.6

[options.packages.find]
exclude = testing

[options.extras_require]
example =
    jupyter
    uproot
test =
    pytest
    uproot

[bdist_wheel]
universal = 1

[flake8]
max-complexity = 12
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,B,B9
